--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.ldaptive</groupId>
+			<artifactId>ldaptive-json</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
